src/certmanager/before-cert-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kube-ecsimsw-com
spec:
  ingressClassName: kong
  rules:
    - host: kube.ecsimsw.com
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: echo
                port:
                  number: 80
