src/certmanager/cert-manager-clusterissuer.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kong-tls-ingress-sample
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod  # or you can use 'letsencrypt-staging' for test
spec:
  ingressClassName: kong
  tls:
    - secretName: test.ecsimsw.com # This secret will be created by cert-manager.
      hosts:
        - test.ecsimsw.com
  rules:
    - host: test.ecsimsw.com
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: echo
                port:
                  number: 80
