src/certmanager/certmanager-sample.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: kong
    cert-manager.io/cluster-issuer: cluster-issuer-test
  name: example-ingress
spec:
  rules:
    - host: kube.ecsimsw.com
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: echo
                port:
                  number: 80
  tls:
    - hosts:
        - kube.ecsimsw.com
      secretName: tls-secret
